1.9.2
-----
  * adapt kdumptool to work with YaST

1.9.1
-----
  * reimplement e-mail notifications

1.9
---
  * complete rewrite of kdump-save and parts of initrd generation
    * mounts are now entirely handled by dracut
    * deprecated: split dumps (saving to more than one targets at once)
    * deprecated: KDUMPTOOL_FLAGS option removed; original XENALLDOMAINS is now
      the default, disable with MAKEDUMPFILE_OPTIONS=-X
    * deprecated: notification e-mails
    * deprecated: copying of the kernel image (KDUMP_COPY_KERNEL)
    * FTP and SFTP are now handled by lftp, added to the spec file as Recommends:
    * SSH and SFTP now support passwords provided in the URL
    * fixed KDUMP_SSH_HOST_KEY, now needs to include the key type    
    * new KDUMP_DUMPFORMAT=raw, will save an unmodified /proc/vmcore
    * the output directory name is now YYYY-MM-DD-HH-MM, i.e. the separator between
      HH and MM changed 
    * unified default KDUMP_SAVEDIR across config, code and man to /var/crash
    * ping is now used to detect network is up; disable with KDUMP_NET_TIMEOUT=0    
    * all the yes/no options changed to true/false; yes/no/1/0 still accepted
  * put the kdump initrd in /var/lib/kdump/initrd
  * use default kernel symlink (/boot/vmlinuz) instead of kernel autodetection
  * KDUMP_KERNELVER can specify an absolute path to a kernel image
  * improved mkdumprd detection of changed settings
  * removed all of kdumptool except the calibrate subcommand
  * cleaned up dependencies (ssh now only Recommended)

1.0.3
-----
  
  * Honor the KDUMP_VERBOSE setting in kdump-save
  * fix distro prefix for ALP
  * add calibrate values for ALP (copied from TW)
  * add calibrate values for Leap 15.5
  * revert back to using rd.neednet=1 to enable network (bsc#1206015)
  * kdumptool calibrate: add even more margin to reservation 
    calculations (bsc#1207061)
  * don't skip infiniband interfaces (bsc#1186745)
    (not a complete fix, requires a patch in dracut as well)